--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,7 +51,8 @@
     "next-env.d.ts",
     "additional.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    "typing/*.d.ts",
   ],
   "exclude": [
     "node_modules"
