--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,9 @@
       "@styles/*": [
         "src/styles/*"
       ],
+      "@const/*": [
+        "src/const/*"
+      ],
       "@utils/*": [
         "src/utils/*"
       ]
