--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"react-tabs": "^3.2.3",
 		"react-toastify": "^8.1.0",
 		"react-use": "^17.3.1",
-		"swiper": "^7.3.0"
+		"swiper": "^7.3.0",
+		"ua-parser-js": "^1.0.2"
 	},
 	"devDependencies": {
 		"@types/body-scroll-lock": "^3.1.0",
