--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,65 @@
 {
-  "nuxt.isNuxtApp": false,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.stylelint": true
-  },
-  "[html,javascript,json,xml]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "editor.formatOnSave": true,
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "stylelint.validate": ["css", "scss", ".module.scss"],
-  "eslint.alwaysShowStatus": true,
-  "eslint.debug": true,
-  "eslint.format.enable": true,
-  "eslint.validate": ["javascript", "html", "vue", "json", "javascriptreact", "typescript", "typescriptreact"],
-  "eslint.options": {
-    "extensions": [".html", ".js", ".vue", ".jsx", "json", ".tsx"]
-  }
+  "cSpell.words": [
+    "adipiscing",
+    "aliqua",
+    "aliquam",
+    "aliquip",
+    "amet",
+    "blazwers",
+    "childrenswear",
+    "clothingegy",
+    "clothingtastic",
+    "desi",
+    "dolore",
+    "duis",
+    "Duisbarg",
+    "eiusmod",
+    "elit",
+    "enim",
+    "fashadil",
+    "fashnetic",
+    "Fendi",
+    "fontsource",
+    "Frenaldo",
+    "fullscreen",
+    "Gucchi",
+    "headlessui",
+    "hoppister",
+    "incididunt",
+    "Jiniya",
+    "labore",
+    "laboris",
+    "megamenu",
+    "nbsp",
+    "nostrud",
+    "overlayscrollbars",
+    "Polarised",
+    "quis",
+    "REDQ",
+    "Scelerisque",
+    "segoe",
+    "sholy",
+    "shoozly",
+    "shosio",
+    "shovia",
+    "Shurgs",
+    "signin",
+    "sollicitudin",
+    "Solly",
+    "speciality",
+    "swiper",
+    "tailwindcss",
+    "tassell",
+    "tempor",
+    "Tissot",
+    "ullamco",
+    "ultrices",
+    "upto",
+    "Veni",
+    "veniam",
+    "Vici",
+    "Vidi",
+    "womens"
+  ],
+  "editor.formatOnSave": true
 }
