--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -23,30 +19,13 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "paths": {
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@containers/*": [
-        "src/containers/*"
-      ],
-      "@contexts/*": [
-        "src/contexts/*"
-      ],
-      "@framework/*": [
-        "src/framework/basic-rest/*"
-      ],
-      "@settings/*": [
-        "src/settings/*"
-      ],
-      "@styles/*": [
-        "src/styles/*"
-      ],
-      "@const/*": [
-        "src/const/*"
-      ],
-      "@utils/*": [
-        "src/utils/*"
-      ]
+      "@components/*": ["src/components/*"],
+      "@containers/*": ["src/containers/*"],
+      "@contexts/*": ["src/contexts/*"],
+      "@framework/*": ["src/framework/basic-rest/*"],
+      "@settings/*": ["src/settings/*"],
+      "@styles/*": ["src/styles/*"],
+      "@utils/*": ["src/utils/*"]
     },
     "incremental": true
   },
@@ -54,10 +33,7 @@
     "next-env.d.ts",
     "additional.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "typing/*.d.ts",
+    "src/**/*.tsx"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
