--- a/package.json
+++ b/package.json
@@ -1,62 +1,64 @@
 {
-  "name": "chawkbazar",
-  "version": "2.1.0",
-  "private": true,
-  "scripts": {
-    "clean": "rimraf \"{.next,dist,build,out,node_modules}\"",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@fontsource/open-sans": "^4.5.2",
-    "@fontsource/satisfy": "^4.5.0",
-    "@headlessui/react": "^1.4.2",
-    "@reach/portal": "^0.16.2",
-    "@tailwindcss/forms": "^0.3.4",
-    "axios": "^0.24.0",
-    "body-scroll-lock": "^4.0.0-beta.0",
-    "classnames": "^2.3.1",
-    "framer-motion": "^5.3.1",
-    "js-cookie": "^3.0.1",
-    "lodash": "^4.17.21",
-    "next": "12.0.4",
-    "next-i18next": "^9.1.0",
-    "next-pwa": "5.4.0",
-    "next-seo": "^4.28.1",
-    "overlayscrollbars": "^1.13.1",
-    "overlayscrollbars-react": "^0.2.3",
-    "rc-drawer": "^4.4.3",
-    "react": "17.0.2",
-    "react-content-loader": "^6.0.3",
-    "react-countdown": "^2.3.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.20.2",
-    "react-icons": "^4.3.1",
-    "react-query": "^3.33.1",
-    "react-rating-stars-component": "^2.2.0",
-    "react-scroll": "^1.8.4",
-    "react-share": "^4.4.0",
-    "react-sticky-box": "^0.9.3",
-    "react-tabs": "^3.2.3",
-    "react-toastify": "^8.1.0",
-    "react-use": "^17.3.1",
-    "swiper": "^7.3.0"
-  },
-  "devDependencies": {
-    "@types/body-scroll-lock": "^3.1.0",
-    "@types/js-cookie": "^3.0.1",
-    "@types/lodash": "^4.14.177",
-    "@types/node": "^16.11.9",
-    "@types/overlayscrollbars": "^1.12.1",
-    "@types/react": "^17.0.35",
-    "@types/react-scroll": "^1.8.3",
-    "@types/react-tabs": "^2.3.3",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.3.11",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^2.2.19",
-    "tailwindcss-rtl": "^0.8.0",
-    "typescript": "^4.5.2"
-  }
+	"name": "chawkbazar",
+	"version": "2.1.5",
+	"private": true,
+	"scripts": {
+		"clean": "rimraf \"{.next,dist,build,out,node_modules}\"",
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@fontsource/open-sans": "^4.5.13",
+		"@fontsource/satisfy": "^4.5.6",
+		"@headlessui/react": "^1.7.4",
+		"@reach/portal": "^0.18.0",
+		"@tailwindcss/forms": "^0.5.3",
+		"axios": "^1.1.3",
+		"body-scroll-lock": "^4.0.0-beta.0",
+		"classnames": "^2.3.2",
+		"framer-motion": "^7.6.5",
+		"js-cookie": "^3.0.1",
+		"lodash": "^4.17.21",
+		"next": "12.3.1",
+		"next-i18next": "^12.1.0",
+		"next-pwa": "5.6.0",
+		"next-seo": "^5.14.1",
+		"overlayscrollbars": "^1.13.3",
+		"overlayscrollbars-react": "^0.3.0",
+		"rc-drawer": "^6.0.1",
+		"react": "18.2.0",
+		"react-content-loader": "^6.2.0",
+		"react-countdown": "^2.3.3",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.39.2",
+		"react-icons": "^4.6.0",
+		"react-query": "^3.39.2",
+		"react-rating-stars-component": "^2.2.0",
+		"react-scroll": "^1.8.8",
+		"react-share": "^4.4.1",
+		"react-sticky-box": "^1.0.2",
+		"react-tabs": "^5.1.0",
+		"react-toastify": "^9.1.1",
+		"react-use": "^17.4.0",
+		"swiper": "^8.4.4"
+	},
+	"devDependencies": {
+		"@swc/cli": "^0.1.57",
+		"@swc/core": "^1.3.21",
+		"@types/body-scroll-lock": "^3.1.0",
+		"@types/js-cookie": "^3.0.2",
+		"@types/lodash": "^4.14.186",
+		"@types/node": "^18.11.3",
+		"@types/overlayscrollbars": "^1.12.1",
+		"@types/react": "18.0.25",
+		"@types/react-scroll": "^1.8.4",
+		"@types/react-tabs": "^5.0.5",
+		"autoprefixer": "^10.4.12",
+		"postcss": "^8.4.18",
+		"rimraf": "^3.0.2",
+		"tailwindcss": "^3.2.3",
+		"tailwindcss-rtl": "^0.9.0",
+		"typescript": "^4.8.4"
+	}
 }
