--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@types/react-scroll": "^1.8.4",
 		"@types/react-tabs": "^5.0.5",
 		"autoprefixer": "^10.4.12",
+		"eslint": "^8.29.0",
 		"postcss": "^8.4.18",
 		"rimraf": "^3.0.2",
 		"tailwindcss": "^3.2.3",
